# decision-time

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPEC.md  docker-compose.yml
.claude/: settings.json
.claude/skills/: ci.md  spec.md  tdd.md
.github/workflows/: ci.yml
backend/: mypy.ini  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  main.py  static.py
backend/app/engines/: base.py  bracket.py  condorcet.py  elo.py  multivote.py  score.py  swiss.py
backend/app/repositories/: options.py  tournaments.py  util.py
backend/app/routers/: options.py  tournaments.py
backend/app/schemas/: common.py  option.py  tournament.py
backend/app/services/: option_service.py  tournament_service.py
backend/tests/: conftest.py
backend/tests/api/: test_options.py  test_tournaments.py  test_tournaments_swiss.py
backend/tests/integration/: test_option_repository.py  test_repo_util.py  test_tournament_repository.py  test_tournament_service_swiss.py  test_tournament_service_undo.py
backend/tests/unit/engines/: test_bracket.py  test_condorcet.py  test_elo.py  test_multivote.py  test_score.py  test_swiss.py
backend/tests/unit/schemas/: test_tournament_config.py  test_vote.py
e2e/: package.json  playwright.config.ts
e2e/tests/: helpers.ts  options.spec.ts  quick-pick.spec.ts  tournament-bracket.spec.ts  tournament-clone-edit.spec.ts  tournament-condorcet.spec.ts  tournament-elo.spec.ts  tournament-multivote.spec.ts  tournament-score.spec.ts  (+1 more)
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
(+86 files in other folders)
